--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpi/LTcZ0P/Tzs3eZRFXMN",
+      "authorship_tag": "ABX9TyM3nJtAjANbC3+AW8pjDixY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -167,6 +167,69 @@
       ],
       "metadata": {
         "id": "fkjZXbsHN1Cz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import necessary libraries\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import cv2\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import albumentations as A\n",
+        "from tqdm import tqdm\n",
+        "import shutil\n",
+        "from glob import glob\n",
+        "import os\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "# Define paths (these should match what you set in the setup_environment cell)\n",
+        "original_input_path = '/content/drive/MyDrive/ISIC2018_original/ISIC2018_Task1_2_Training_Input'\n",
+        "original_gt_path = '/content/drive/MyDrive/ISIC2018_original/ISIC2018_Task1_Training_GroundTruth'\n",
+        "processed_base_path = '/content/drive/MyDrive/ISIC2018'\n",
+        "\n",
+        "class ISIC2018DataPreprocessor:\n",
+        "    def __init__(self,\n",
+        "                 original_input_path,\n",
+        "                 original_gt_path,\n",
+        "                 processed_base_path,\n",
+        "                 img_size=(256, 256),\n",
+        "                 val_split=0.15,\n",
+        "                 test_split=0.15):\n",
+        "        \"\"\"\n",
+        "        Initialize the ISIC2018 data preprocessor.\n",
+        "\n",
+        "        Args:\n",
+        "            original_input_path: Path to original input images\n",
+        "            original_gt_path: Path to original ground truth masks\n",
+        "            processed_base_path: Base path for processed dataset\n",
+        "            img_size: Target image size (height, width)\n",
+        "            val_split: Validation split ratio\n",
+        "            test_split: Test split ratio\n",
+        "        \"\"\"\n",
+        "        self.original_input_path = original_input_path\n",
+        "        self.original_gt_path = original_gt_path\n",
+        "        self.processed_base_path = processed_base_path\n",
+        "        self.img_size = img_size\n",
+        "        self.val_split = val_split\n",
+        "        self.test_split = test_split\n",
+        "\n",
+        "        # Create processed dataset directories\n",
+        "        self.train_img_dir = os.path.join(processed_base_path, 'train', 'images')\n",
+        "        self.train_mask_dir = os.path.join(processed_base_path, 'train', 'masks')\n",
+        "        self.val_img_dir = os.path.join(processed_base_path, 'validation', 'images')\n",
+        "        self.val_mask_dir = os.path.join(processed_base_path, 'validation', 'masks')\n",
+        "        self.test_img_dir = os.path.join(processed_base_path, 'test', 'images')\n",
+        "        self.test_mask_dir = os.path.join(processed_base_path, 'test', 'masks')\n",
+        "\n",
+        "        self._create_directories()"
+      ],
+      "metadata": {
+        "id": "M6oxBUReOecS"
       },
       "execution_count": null,
       "outputs": []
