--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3nJtAjANbC3+AW8pjDixY",
+      "authorship_tag": "ABX9TyN3hL6s8dgjpinR7l4wHtma",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -226,7 +226,20 @@
         "        self.test_img_dir = os.path.join(processed_base_path, 'test', 'images')\n",
         "        self.test_mask_dir = os.path.join(processed_base_path, 'test', 'masks')\n",
         "\n",
-        "        self._create_directories()"
+        "        self._create_directories()\n",
+        "\n",
+        "     def _create_directories(self):\n",
+        "        \"\"\"Create necessary directories for processed dataset.\"\"\"\n",
+        "        directories = [\n",
+        "            self.train_img_dir, self.train_mask_dir,\n",
+        "            self.val_img_dir, self.val_mask_dir,\n",
+        "            self.test_img_dir, self.test_mask_dir\n",
+        "        ]\n",
+        "\n",
+        "        for directory in directories:\n",
+        "            os.makedirs(directory, exist_ok=True)\n",
+        "\n",
+        "        print(\"Created processed dataset directories.\")"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
