Create function for organizing dataset

--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3hL6s8dgjpinR7l4wHtma",
+      "authorship_tag": "ABX9TyPhmb5Ph7EO7MhkeUgd/Y/3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -239,7 +239,60 @@
         "        for directory in directories:\n",
         "            os.makedirs(directory, exist_ok=True)\n",
         "\n",
-        "        print(\"Created processed dataset directories.\")"
+        "        print(\"Created processed dataset directories.\")\n",
+        "\n",
+        "\n",
+        "    def organize_dataset(self):\n",
+        "        \"\"\"\n",
+        "        Organize the dataset by matching input images with their corresponding masks\n",
+        "        and splitting into train, validation, and test sets.\n",
+        "        \"\"\"\n",
+        "        print(\"Organizing dataset...\")\n",
+        "\n",
+        "        # Get list of all input images and masks\n",
+        "        input_files = sorted(os.listdir(self.original_input_path))\n",
+        "        mask_files = sorted(os.listdir(self.original_gt_path))\n",
+        "\n",
+        "        # Extract image IDs from filenames\n",
+        "        input_ids = [os.path.splitext(f)[0] for f in input_files]\n",
+        "        mask_ids = [os.path.splitext(f)[0].replace('_segmentation', '') for f in mask_files]\n",
+        "\n",
+        "        # Create mapping from image ID to filenames\n",
+        "        input_map = {id: f for id, f in zip(input_ids, input_files)}\n",
+        "        mask_map = {id: f for id, f in zip(mask_ids, mask_files)}\n",
+        "\n",
+        "        # Find common IDs (images that have corresponding masks)\n",
+        "        common_ids = sorted(list(set(input_ids).intersection(set(mask_ids))))\n",
+        "\n",
+        "        print(f\"Found {len(common_ids)} images with corresponding masks.\")\n",
+        "\n",
+        "        # Split into train, validation, and test sets\n",
+        "        train_ids, temp_ids = train_test_split(\n",
+        "            common_ids,\n",
+        "            test_size=self.val_split + self.test_split,\n",
+        "            random_state=42\n",
+        "        )\n",
+        "\n",
+        "        # Further split temp_ids into validation and test\n",
+        "        val_ratio = self.val_split / (self.val_split + self.test_split)\n",
+        "        val_ids, test_ids = train_test_split(\n",
+        "            temp_ids,\n",
+        "            test_size=1 - val_ratio,\n",
+        "            random_state=42\n",
+        "        )\n",
+        "\n",
+        "        print(f\"Split dataset: {len(train_ids)} train, {len(val_ids)} validation, {len(test_ids)} test\")\n",
+        "\n",
+        "        # Copy files to their respective directories\n",
+        "        self._copy_files(train_ids, input_map, mask_map, self.train_img_dir, self.train_mask_dir)\n",
+        "        self._copy_files(val_ids, input_map, mask_map, self.val_img_dir, self.val_mask_dir)\n",
+        "        self._copy_files(test_ids, input_map, mask_map, self.test_img_dir, self.test_mask_dir)\n",
+        "\n",
+        "        return {\n",
+        "            'train_ids': train_ids,\n",
+        "            'val_ids': val_ids,\n",
+        "            'test_ids': test_ids\n",
+        "        }"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
