Copy image and mask files to their respective directories

--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhmb5Ph7EO7MhkeUgd/Y/3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -292,7 +291,40 @@
         "            'train_ids': train_ids,\n",
         "            'val_ids': val_ids,\n",
         "            'test_ids': test_ids\n",
-        "        }"
+        "        }\n",
+        "\n",
+        "\n",
+        "    def _copy_files(self, ids, input_map, mask_map, img_dir, mask_dir):\n",
+        "        \"\"\"\n",
+        "        Copy image and mask files to their respective directories.\n",
+        "\n",
+        "        Args:\n",
+        "            ids: List of image IDs to copy\n",
+        "            input_map: Mapping from image ID to input filename\n",
+        "            mask_map: Mapping from image ID to mask filename\n",
+        "            img_dir: Destination directory for images\n",
+        "            mask_dir: Destination directory for masks\n",
+        "        \"\"\"\n",
+        "        for id in tqdm(ids, desc=f\"Copying files to {os.path.basename(os.path.dirname(img_dir))}\"):\n",
+        "            # Copy input image\n",
+        "            src_img = os.path.join(self.original_input_path, input_map[id])\n",
+        "            dst_img = os.path.join(img_dir, f\"{id}.jpg\")\n",
+        "\n",
+        "            # Copy mask\n",
+        "            src_mask = os.path.join(self.original_gt_path, mask_map[id])\n",
+        "            dst_mask = os.path.join(mask_dir, f\"{id}_mask.png\")\n",
+        "\n",
+        "            # Read, resize, and save image\n",
+        "            img = cv2.imread(src_img)\n",
+        "            img = cv2.resize(img, self.img_size[::-1])  # cv2 uses (width, height)\n",
+        "            cv2.imwrite(dst_img, img)\n",
+        "\n",
+        "            # Read, resize, and save mask\n",
+        "            mask = cv2.imread(src_mask, cv2.IMREAD_GRAYSCALE)\n",
+        "            mask = cv2.resize(mask, self.img_size[::-1], interpolation=cv2.INTER_NEAREST)\n",
+        "            # Ensure binary mask (0 or 255)\n",
+        "            mask = (mask > 127).astype(np.uint8) * 255\n",
+        "            cv2.imwrite(dst_mask, mask)"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
