--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -324,7 +324,39 @@
         "            mask = cv2.resize(mask, self.img_size[::-1], interpolation=cv2.INTER_NEAREST)\n",
         "            # Ensure binary mask (0 or 255)\n",
         "            mask = (mask > 127).astype(np.uint8) * 255\n",
-        "            cv2.imwrite(dst_mask, mask)"
+        "            cv2.imwrite(dst_mask, mask)\n",
+        "\n",
+        "    def create_augmentation_pipeline(self):\n",
+        "        \"\"\"\n",
+        "        Create data augmentation pipelines for training and validation.\n",
+        "\n",
+        "        Returns:\n",
+        "            Dictionary containing train and validation augmentation pipelines\n",
+        "        \"\"\"\n",
+        "        # Training augmentations\n",
+        "        train_augmentation = A.Compose([\n",
+        "            A.HorizontalFlip(p=0.5),\n",
+        "            A.VerticalFlip(p=0.5),\n",
+        "            A.RandomRotate90(p=0.5),\n",
+        "            A.ShiftScaleRotate(shift_limit=0.0625, scale_limit=0.1, rotate_limit=15, p=0.5),\n",
+        "            A.OneOf([\n",
+        "                A.ElasticTransform(alpha=120, sigma=120 * 0.05, p=0.5),  # Remove alpha_affine\n",
+        "                A.GridDistortion(p=0.5),\n",
+        "                A.OpticalDistortion(distort_limit=1.0, p=0.5),  # Remove shift_limit\n",
+        "            ], p=0.3),\n",
+        "\n",
+        "            A.Normalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225)),\n",
+        "        ])\n",
+        "\n",
+        "        # Validation/Test augmentations (only normalization)\n",
+        "        val_augmentation = A.Compose([\n",
+        "            A.Normalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225)),\n",
+        "        ])\n",
+        "\n",
+        "        return {\n",
+        "            'train': train_augmentation,\n",
+        "            'val': val_augmentation\n",
+        "        }"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
