--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -344,6 +344,11 @@
         "                A.GridDistortion(p=0.5),\n",
         "                A.OpticalDistortion(distort_limit=1.0, p=0.5),  # Remove shift_limit\n",
         "            ], p=0.3),\n",
+        "            A.OneOf([\n",
+        "                A.HueSaturationValue(hue_shift_limit=10, sat_shift_limit=15, val_shift_limit=10, p=0.5),\n",
+        "                A.CLAHE(clip_limit=2.0, p=0.5),\n",
+        "                A.RandomBrightnessContrast(brightness_limit=0.1, contrast_limit=0.1, p=0.5),\n",
+        "            ], p=0.3),\n",
         "\n",
         "            A.Normalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225)),\n",
         "        ])\n",
