--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -361,7 +361,9 @@
         "        return {\n",
         "            'train': train_augmentation,\n",
         "            'val': val_augmentation\n",
-        "        }"
+        "        }\n",
+        "\n",
+        "    def create_tf_datasets(self, batch_size=16, buffer_size=1000):"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
