--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -363,7 +363,22 @@
         "            'val': val_augmentation\n",
         "        }\n",
         "\n",
-        "    def create_tf_datasets(self, batch_size=16, buffer_size=1000):"
+        "    def create_tf_datasets(self, batch_size=16, buffer_size=1000):\n",
+        "         # Create augmentation pipelines\n",
+        "        train_augmentation = self.create_augmentation_pipeline()['train']\n",
+        "        val_augmentation = self.create_augmentation_pipeline()['val']\n",
+        "\n",
+        "        # Get list of image and mask files\n",
+        "        train_img_files = sorted(glob(os.path.join(self.train_img_dir, '*.jpg')))\n",
+        "        train_mask_files = sorted(glob(os.path.join(self.train_mask_dir, '*_mask.png')))\n",
+        "\n",
+        "        val_img_files = sorted(glob(os.path.join(self.val_img_dir, '*.jpg')))\n",
+        "        val_mask_files = sorted(glob(os.path.join(self.val_mask_dir, '*_mask.png')))\n",
+        "\n",
+        "        test_img_files = sorted(glob(os.path.join(self.test_img_dir, '*.jpg')))\n",
+        "        test_mask_files = sorted(glob(os.path.join(self.test_mask_dir, '*_mask.png')))\n",
+        "\n",
+        "        # Define preprocessing function that doesn't capture the augmentation object"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
