--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -378,7 +378,28 @@
         "        test_img_files = sorted(glob(os.path.join(self.test_img_dir, '*.jpg')))\n",
         "        test_mask_files = sorted(glob(os.path.join(self.test_mask_dir, '*_mask.png')))\n",
         "\n",
-        "        # Define preprocessing function that doesn't capture the augmentation object"
+        "        # Define preprocessing function that doesn't capture the augmentation object\n",
+        "        def preprocess_train(img_path, mask_path):\n",
+        "            # Convert tensors to numpy strings\n",
+        "            img_path_str = img_path.numpy().decode('utf-8')\n",
+        "            mask_path_str = mask_path.numpy().decode('utf-8')\n",
+        "\n",
+        "            # Read image and mask\n",
+        "            img = cv2.imread(img_path_str)\n",
+        "            img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+        "\n",
+        "            mask = cv2.imread(mask_path_str, cv2.IMREAD_GRAYSCALE)\n",
+        "            mask = np.expand_dims(mask, axis=-1)\n",
+        "\n",
+        "            # Apply augmentations\n",
+        "            augmented = train_augmentation(image=img, mask=mask)\n",
+        "            img_aug = augmented['image']\n",
+        "            mask_aug = augmented['mask']\n",
+        "\n",
+        "            # Normalize mask to [0, 1]\n",
+        "            mask_aug = mask_aug / 255.0\n",
+        "\n",
+        "            return img_aug.astype(np.float32), mask_aug.astype(np.float32)\n"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
