Wrap preprocessing functions with tf.py_function

--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -399,7 +399,28 @@
         "            # Normalize mask to [0, 1]\n",
         "            mask_aug = mask_aug / 255.0\n",
         "\n",
-        "            return img_aug.astype(np.float32), mask_aug.astype(np.float32)\n"
+        "            return img_aug.astype(np.float32), mask_aug.astype(np.float32)\n",
+        "\n",
+        "            # Wrap preprocessing functions with tf.py_function\n",
+        "        def tf_preprocess_train(img_path, mask_path):\n",
+        "            [img, mask] = tf.py_function(\n",
+        "                preprocess_train,\n",
+        "                [img_path, mask_path],\n",
+        "                [tf.float32, tf.float32]\n",
+        "            )\n",
+        "            img.set_shape([self.img_size[0], self.img_size[1], 3])\n",
+        "            mask.set_shape([self.img_size[0], self.img_size[1], 1])\n",
+        "            return img, mask\n",
+        "\n",
+        "        def tf_preprocess_val(img_path, mask_path):\n",
+        "            [img, mask] = tf.py_function(\n",
+        "                preprocess_val,\n",
+        "                [img_path, mask_path],\n",
+        "                [tf.float32, tf.float32]\n",
+        "            )\n",
+        "            img.set_shape([self.img_size[0], self.img_size[1], 3])\n",
+        "            mask.set_shape([self.img_size[0], self.img_size[1], 1])\n",
+        "            return img, mask\n"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
