--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -420,7 +420,19 @@
         "            )\n",
         "            img.set_shape([self.img_size[0], self.img_size[1], 3])\n",
         "            mask.set_shape([self.img_size[0], self.img_size[1], 1])\n",
-        "            return img, mask\n"
+        "            return img, mask\n",
+        "        # Create datasets\n",
+        "        train_ds = tf.data.Dataset.from_tensor_slices((train_img_files, train_mask_files))\n",
+        "        train_ds = train_ds.map(tf_preprocess_train, num_parallel_calls=tf.data.AUTOTUNE)\n",
+        "        train_ds = train_ds.shuffle(buffer_size).batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
+        "\n",
+        "        val_ds = tf.data.Dataset.from_tensor_slices((val_img_files, val_mask_files))\n",
+        "        val_ds = val_ds.map(tf_preprocess_val, num_parallel_calls=tf.data.AUTOTUNE)\n",
+        "        val_ds = val_ds.batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
+        "\n",
+        "        test_ds = tf.data.Dataset.from_tensor_slices((test_img_files, test_mask_files))\n",
+        "        test_ds = test_ds.map(tf_preprocess_val, num_parallel_calls=tf.data.AUTOTUNE)\n",
+        "        test_ds = test_ds.batch(batch_size).prefetch(tf.data.AUTOTUNE)\n"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
