--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -432,7 +432,13 @@
         "\n",
         "        test_ds = tf.data.Dataset.from_tensor_slices((test_img_files, test_mask_files))\n",
         "        test_ds = test_ds.map(tf_preprocess_val, num_parallel_calls=tf.data.AUTOTUNE)\n",
-        "        test_ds = test_ds.batch(batch_size).prefetch(tf.data.AUTOTUNE)\n"
+        "        test_ds = test_ds.batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
+        "\n",
+        "        return {\n",
+        "            'train': train_ds,\n",
+        "            'val': val_ds,\n",
+        "            'test': test_ds\n",
+        "        }\n"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
