Create visualize_samples function

--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -438,7 +438,25 @@
         "            'train': train_ds,\n",
         "            'val': val_ds,\n",
         "            'test': test_ds\n",
-        "        }\n"
+        "        }\n",
+        "    def visualize_samples(self, num_samples=5):\n",
+        "        \"\"\"\n",
+        "        Visualize random samples from the training set with augmentations.\n",
+        "\n",
+        "        Args:\n",
+        "            num_samples: Number of samples to visualize\n",
+        "        \"\"\"\n",
+        "        # Get list of image and mask files\n",
+        "        img_files = sorted(glob(os.path.join(self.train_img_dir, '*.jpg')))\n",
+        "        mask_files = sorted(glob(os.path.join(self.train_mask_dir, '*_mask.png')))\n",
+        "\n",
+        "        # Create augmentation pipeline\n",
+        "        augmentations = self.create_augmentation_pipeline()\n",
+        "\n",
+        "        # Select random samples\n",
+        "        indices = np.random.choice(len(img_files), num_samples, replace=False)\n",
+        "\n",
+        "        plt.figure(figsize=(15, 5 * num_samples))\n"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
