--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -456,7 +456,51 @@
         "        # Select random samples\n",
         "        indices = np.random.choice(len(img_files), num_samples, replace=False)\n",
         "\n",
-        "        plt.figure(figsize=(15, 5 * num_samples))\n"
+        "        plt.figure(figsize=(15, 5 * num_samples))\n",
+        "\n",
+        "        for i, idx in enumerate(indices):\n",
+        "            # Read image and mask\n",
+        "            img = cv2.imread(img_files[idx])\n",
+        "            img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+        "\n",
+        "            mask = cv2.imread(mask_files[idx], cv2.IMREAD_GRAYSCALE)\n",
+        "            mask = np.expand_dims(mask, axis=-1)\n",
+        "\n",
+        "            # Apply augmentations\n",
+        "            augmented = augmentations['train'](image=img, mask=mask)\n",
+        "            img_aug = augmented['image']\n",
+        "            mask_aug = augmented['mask']\n",
+        "\n",
+        "            # Denormalize image for visualization\n",
+        "            mean = np.array([0.485, 0.456, 0.406])\n",
+        "            std = np.array([0.229, 0.224, 0.225])\n",
+        "            img_aug = img_aug * std + mean\n",
+        "            img_aug = np.clip(img_aug, 0, 1)\n",
+        "\n",
+        "            # Plot original image\n",
+        "            plt.subplot(num_samples, 3, i * 3 + 1)\n",
+        "            plt.imshow(img)\n",
+        "            plt.title(f'Original Image {i+1}')\n",
+        "            plt.axis('off')\n",
+        "\n",
+        "            # Plot augmented image\n",
+        "            plt.subplot(num_samples, 3, i * 3 + 2)\n",
+        "            plt.imshow(img_aug)\n",
+        "            plt.title(f'Augmented Image {i+1}')\n",
+        "            plt.axis('off')\n",
+        "\n",
+        "            # Plot mask\n",
+        "            plt.subplot(num_samples, 3, i * 3 + 3)\n",
+        "            plt.imshow(mask_aug[:, :, 0], cmap='gray')\n",
+        "            plt.title(f'Mask {i+1}')\n",
+        "            plt.axis('off')\n",
+        "\n",
+        "\n",
+        "         plt.tight_layout()\n",
+        "         plt.savefig(os.path.join(self.processed_base_path, 'sample_augmentations.png'))\n",
+        "         plt.show()\n",
+        "\n",
+        "         print(f\"Saved sample visualizations to {os.path.join(self.processed_base_path, 'sample_augmentations.png')}\")"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
