create function for data statistics

--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -500,7 +500,34 @@
         "         plt.savefig(os.path.join(self.processed_base_path, 'sample_augmentations.png'))\n",
         "         plt.show()\n",
         "\n",
-        "         print(f\"Saved sample visualizations to {os.path.join(self.processed_base_path, 'sample_augmentations.png')}\")"
+        "         print(f\"Saved sample visualizations to {os.path.join(self.processed_base_path, 'sample_augmentations.png')}\")\n",
+        "    def get_dataset_stats(self):\n",
+        "        \"\"\"\n",
+        "        Get statistics about the processed dataset.\n",
+        "\n",
+        "        Returns:\n",
+        "            Dictionary containing dataset statistics\n",
+        "        \"\"\"\n",
+        "        train_imgs = len(os.listdir(self.train_img_dir))\n",
+        "        val_imgs = len(os.listdir(self.val_img_dir))\n",
+        "        test_imgs = len(os.listdir(self.test_img_dir))\n",
+        "\n",
+        "        stats = {\n",
+        "            'train_samples': train_imgs,\n",
+        "            'val_samples': val_imgs,\n",
+        "            'test_samples': test_imgs,\n",
+        "            'total_samples': train_imgs + val_imgs + test_imgs,\n",
+        "            'image_size': self.img_size\n",
+        "        }\n",
+        "\n",
+        "        print(\"\\nDataset Statistics:\")\n",
+        "        print(f\"  Training samples: {stats['train_samples']}\")\n",
+        "        print(f\"  Validation samples: {stats['val_samples']}\")\n",
+        "        print(f\"  Test samples: {stats['test_samples']}\")\n",
+        "        print(f\"  Total samples: {stats['total_samples']}\")\n",
+        "        print(f\"  Image size: {stats['image_size']}\")\n",
+        "\n",
+        "        return stats"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
