--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -527,7 +527,16 @@
         "        print(f\"  Total samples: {stats['total_samples']}\")\n",
         "        print(f\"  Image size: {stats['image_size']}\")\n",
         "\n",
-        "        return stats"
+        "        return stats\n",
+        "\n",
+        "# Initialize and run data preprocessing\n",
+        "preprocessor = ISIC2018DataPreprocessor(\n",
+        "    original_input_path=original_input_path,\n",
+        "    original_gt_path=original_gt_path,\n",
+        "    processed_base_path=processed_base_path,\n",
+        "    img_size=(256, 256),\n",
+        "    val_split=0.15,\n",
+        "    test_split=0.15\n"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
