Check if dataset is already organized

--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -536,7 +536,16 @@
         "    processed_base_path=processed_base_path,\n",
         "    img_size=(256, 256),\n",
         "    val_split=0.15,\n",
-        "    test_split=0.15\n"
+        "    test_split=0.15\n",
+        "\n",
+        "# Check if dataset is already organized\n",
+        "if (len(os.listdir(preprocessor.train_img_dir)) == 0 or\n",
+        "    len(os.listdir(preprocessor.val_img_dir)) == 0 or\n",
+        "    len(os.listdir(preprocessor.test_img_dir)) == 0):\n",
+        "    # Organize dataset\n",
+        "    preprocessor.organize_dataset()\n",
+        "else:\n",
+        "    print(\"Dataset already organized. Skipping organization step.\")\n"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
