--- a/Dataset_preprocessing.ipynb
+++ b/Dataset_preprocessing.ipynb
@@ -545,7 +545,21 @@
         "    # Organize dataset\n",
         "    preprocessor.organize_dataset()\n",
         "else:\n",
-        "    print(\"Dataset already organized. Skipping organization step.\")\n"
+        "    print(\"Dataset already organized. Skipping organization step.\")\n",
+        "\n",
+        "# Visualize samples\n",
+        "preprocessor.visualize_samples(num_samples=3)\n",
+        "\n",
+        "# Get dataset statistics\n",
+        "stats = preprocessor.get_dataset_stats()\n",
+        "\n",
+        "# Create TensorFlow datasets\n",
+        "datasets = preprocessor.create_tf_datasets(batch_size=4)\n",
+        "\n",
+        "# Make datasets available for other cells\n",
+        "train_dataset = datasets['train']\n",
+        "val_dataset = datasets['val']\n",
+        "test_dataset = datasets['test']\n"
       ],
       "metadata": {
         "id": "M6oxBUReOecS"
