Custom Capsule Layer

--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwBlfWIEJXOHIRnkGn/mgj",
+      "authorship_tag": "ABX9TyPBV3x2OUjL0Thvs9Z5wk97",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,49 @@
       "source": [
         "#model"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, Dropout, BatchNormalization, UpSampling2D\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.regularizers import l2\n",
+        "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint, ReduceLROnPlateau\n",
+        "from tensorflow.keras.metrics import MeanIoU\n"
+      ],
+      "metadata": {
+        "id": "JUd6VRMbnQuT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Custom Capsule Layer Class\n",
+        "def create_capsule_layer():\n",
+        "    class CapsuleLayer(tf.keras.layers.Layer):\n",
+        "        def __init__(self, num_capsules, capsule_dim, num_routing=3, **kwargs):\n",
+        "            super(CapsuleLayer, self).__init__(**kwargs)\n",
+        "            self.num_capsules = num_capsules\n",
+        "            self.capsule_dim = capsule_dim\n",
+        "            self.num_routing = num_routing\n",
+        "\n",
+        "        def build(self, input_shape):\n",
+        "            self.input_height, self.input_width, self.input_channels = input_shape[1:4]\n",
+        "            self.W = self.add_weight(\n",
+        "                shape=[self.input_channels, self.num_capsules * self.capsule_dim],\n",
+        "                initializer='glorot_uniform',\n",
+        "                trainable=True\n",
+        "            )"
+      ],
+      "metadata": {
+        "id": "-g3BQ4gxnc9x"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
