--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBV3x2OUjL0Thvs9Z5wk97",
+      "authorship_tag": "ABX9TyNyUHQham0oWfh6PjXofDRr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,31 @@
         "                shape=[self.input_channels, self.num_capsules * self.capsule_dim],\n",
         "                initializer='glorot_uniform',\n",
         "                trainable=True\n",
-        "            )"
+        "            )\n",
+        "         def call(self, inputs):\n",
+        "            batch_size, height, width, channels = inputs.shape\n",
+        "            tf.debugging.assert_equal(height, self.input_height, message=\"Height mismatch\")\n",
+        "            tf.debugging.assert_equal(width, self.input_width, message=\"Width mismatch\")\n",
+        "            tf.debugging.assert_equal(channels, self.input_channels, message=\"Channels mismatch\")\n",
+        "\n",
+        "            inputs_reshaped = tf.nn.relu(inputs)  # Apply ReLU\n",
+        "            # shape (batch_size, height, width, channels)\n",
+        "            # Transform each spatial position to capsules\n",
+        "            u_hat = tf.tensordot(inputs_reshaped, self.W, axes=[[3], [0]])\n",
+        "            u_hat = tf.reshape(u_hat, (-1, height, width, self.num_capsules, self.capsule_dim))\n",
+        "\n",
+        "            # Initialize routing logits\n",
+        "            b = tf.zeros(shape=(tf.shape(inputs)[0], height, width, self.num_capsules))\n",
+        "\n",
+        "            # Dynamic routing\n",
+        "            for i in range(self.num_routing):\n",
+        "                c = tf.nn.softmax(b, axis=3)  # Softmax over num_capsules\n",
+        "                s = tf.reduce_sum(c[..., None] * u_hat, axis=3)  # Sum over num_capsules\n",
+        "                v = self.squash(s)  # Squash to get capsule vectors\n",
+        "                if i < self.num_routing - 1:\n",
+        "                    b += tf.reduce_sum(u_hat * v[..., None, :], axis=4)\n",
+        "\n",
+        "            return v  # Shape: (batch_size, height, width, capsule_dim)"
       ],
       "metadata": {
         "id": "-g3BQ4gxnc9x"
