Model Creation for Binary Image Segmentation

--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyUHQham0oWfh6PjXofDRr",
+      "authorship_tag": "ABX9TyPGTlHV1PS6eR61LGuhuAh2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,17 @@
         "                if i < self.num_routing - 1:\n",
         "                    b += tf.reduce_sum(u_hat * v[..., None, :], axis=4)\n",
         "\n",
-        "            return v  # Shape: (batch_size, height, width, capsule_dim)"
+        "            return v  # Shape: (batch_size, height, width, capsule_dim)\n",
+        "        def squash(self, s, axis=-1):\n",
+        "            s_squared_norm = tf.reduce_sum(tf.square(s), axis=axis, keepdims=True)\n",
+        "            scale = s_squared_norm / (1 + s_squared_norm)\n",
+        "            return scale * s / tf.sqrt(s_squared_norm + 1e-9)\n",
+        "\n",
+        "    return CapsuleLayer\n",
+        "\n",
+        "# Model Creation for Binary Image Segmentation\n",
+        "def create_capsule_segmentation_model(input_shape=(256, 256, 3), num_capsules=8, capsule_dim=16):\n",
+        "    CapsuleLayer = create_capsule_layer()"
       ],
       "metadata": {
         "id": "-g3BQ4gxnc9x"
