--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGTlHV1PS6eR61LGuhuAh2",
+      "authorship_tag": "ABX9TyM5TJxow+WtJk+dcEuHJFGB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +106,24 @@
         "\n",
         "# Model Creation for Binary Image Segmentation\n",
         "def create_capsule_segmentation_model(input_shape=(256, 256, 3), num_capsules=8, capsule_dim=16):\n",
-        "    CapsuleLayer = create_capsule_layer()"
+        "    CapsuleLayer = create_capsule_layer()\n",
+        "\n",
+        "    # Input layer\n",
+        "    input_layer = Input(shape=input_shape)\n",
+        "\n",
+        "    # Encoder: Convolutional block 1\n",
+        "    x = Conv2D(filters=64, kernel_size=3, activation='relu', padding='same', kernel_regularizer=l2(0.0002))(input_layer)\n",
+        "    x = Conv2D(filters=64, kernel_size=3, activation='relu', padding='same')(x)\n",
+        "    x = BatchNormalization()(x)\n",
+        "    x = MaxPooling2D(pool_size=(2, 2))(x)\n",
+        "    x = Dropout(0.3)(x)\n",
+        "\n",
+        "    # Encoder: Convolutional block 2\n",
+        "    x = Conv2D(filters=128, kernel_size=3, activation='relu', padding='same', kernel_regularizer=l2(0.0002))(x)\n",
+        "    x = Conv2D(filters=128, kernel_size=3, activation='relu', padding='same')(x)\n",
+        "    x = BatchNormalization()(x)\n",
+        "    x = MaxPooling2D(pool_size=(2, 2))(x)\n",
+        "    x = Dropout(0.3)(x)\n"
       ],
       "metadata": {
         "id": "-g3BQ4gxnc9x"
