--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5TJxow+WtJk+dcEuHJFGB",
+      "authorship_tag": "ABX9TyO1sAePjHI2GYzfbdkYDlK0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,7 +123,21 @@
         "    x = Conv2D(filters=128, kernel_size=3, activation='relu', padding='same')(x)\n",
         "    x = BatchNormalization()(x)\n",
         "    x = MaxPooling2D(pool_size=(2, 2))(x)\n",
-        "    x = Dropout(0.3)(x)\n"
+        "    x = Dropout(0.3)(x)\n",
+        "\n",
+        "    # Capsule layer\n",
+        "    x = CapsuleLayer(num_capsules=num_capsules, capsule_dim=capsule_dim)(x)\n",
+        "\n",
+        "    # Decoder: Upsampling and convolutional layers\n",
+        "    x = UpSampling2D(size=(2, 2))(x)\n",
+        "    x = Conv2D(filters=128, kernel_size=3, activation='relu', padding='same', kernel_regularizer=l2(0.0002))(x)\n",
+        "    x = BatchNormalization()(x)\n",
+        "    x = Dropout(0.3)(x)\n",
+        "\n",
+        "    x = UpSampling2D(size=(2, 2))(x)\n",
+        "    x = Conv2D(filters=64, kernel_size=3, activation='relu', padding='same', kernel_regularizer=l2(0.0002))(x)\n",
+        "    x = BatchNormalization()(x)\n",
+        "    x = Dropout(0.3)(x)"
       ],
       "metadata": {
         "id": "-g3BQ4gxnc9x"
