--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1sAePjHI2GYzfbdkYDlK0",
+      "authorship_tag": "ABX9TyMF9mSP6tT23EBD6LALDSC4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -137,7 +137,10 @@
         "    x = UpSampling2D(size=(2, 2))(x)\n",
         "    x = Conv2D(filters=64, kernel_size=3, activation='relu', padding='same', kernel_regularizer=l2(0.0002))(x)\n",
         "    x = BatchNormalization()(x)\n",
-        "    x = Dropout(0.3)(x)"
+        "    x = Dropout(0.3)(x)\n",
+        "\n",
+        "    # Output layer: Single channel with sigmoid for binary segmentation\n",
+        "    output_layer = Conv2D(filters=1, kernel_size=1, activation='sigmoid', padding='same')(x)"
       ],
       "metadata": {
         "id": "-g3BQ4gxnc9x"
