--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMF9mSP6tT23EBD6LALDSC4",
+      "authorship_tag": "ABX9TyPnsDOWHa21sfwHEipt/1b+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -140,7 +140,19 @@
         "    x = Dropout(0.3)(x)\n",
         "\n",
         "    # Output layer: Single channel with sigmoid for binary segmentation\n",
-        "    output_layer = Conv2D(filters=1, kernel_size=1, activation='sigmoid', padding='same')(x)"
+        "    output_layer = Conv2D(filters=1, kernel_size=1, activation='sigmoid', padding='same')(x)\n",
+        "\n",
+        "     # Create model\n",
+        "    model = Model(inputs=input_layer, outputs=output_layer)\n",
+        "\n",
+        "    # Compile model with additional IoU metric\n",
+        "    model.compile(\n",
+        "        optimizer=Adam(learning_rate=0.0005),\n",
+        "        loss='binary_crossentropy',\n",
+        "        metrics=['accuracy', MeanIoU(num_classes=2)]  # Binary segmentation: background + lesion\n",
+        "    )\n",
+        "\n",
+        "    return model"
       ],
       "metadata": {
         "id": "-g3BQ4gxnc9x"
