--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnsDOWHa21sfwHEipt/1b+",
+      "authorship_tag": "ABX9TyNysQ6uxG62jKN0mN7s+7mX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,7 +152,21 @@
         "        metrics=['accuracy', MeanIoU(num_classes=2)]  # Binary segmentation: background + lesion\n",
         "    )\n",
         "\n",
-        "    return model"
+        "    return model\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "\n",
+        "\n",
+        "    # Create and compile model\n",
+        "    model = create_capsule_segmentation_model(input_shape=(256, 256, 3))\n",
+        "    model.summary()\n",
+        "\n",
+        "      # Define callbacks\n",
+        "    callbacks = [\n",
+        "        EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True),\n",
+        "        ModelCheckpoint(filepath='/content/drive/MyDrive/ISIC2018/best_capsule_model.keras', save_best_only=True, monitor='val_loss'),\n",
+        "        ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=5, min_lr=1e-7)\n",
+        "    ]"
       ],
       "metadata": {
         "id": "-g3BQ4gxnc9x"
