--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNysQ6uxG62jKN0mN7s+7mX",
+      "authorship_tag": "ABX9TyOrZL7+uL84EUAGrmPeJuKV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,12 +161,23 @@
         "    model = create_capsule_segmentation_model(input_shape=(256, 256, 3))\n",
         "    model.summary()\n",
         "\n",
-        "      # Define callbacks\n",
+        "    # Define callbacks\n",
         "    callbacks = [\n",
         "        EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True),\n",
         "        ModelCheckpoint(filepath='/content/drive/MyDrive/ISIC2018/best_capsule_model.keras', save_best_only=True, monitor='val_loss'),\n",
         "        ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=5, min_lr=1e-7)\n",
-        "    ]"
+        "    ]\n",
+        "\n",
+        "    # Train model\n",
+        "    print(\"Training model...\")\n",
+        "    history = model.fit(\n",
+        "        train_dataset,\n",
+        "        validation_data=val_dataset,\n",
+        "        epochs=50,\n",
+        "        callbacks=callbacks\n",
+        "    )\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "-g3BQ4gxnc9x"
